[package]
name = "rust_app"
version = "0.0.1"
authors = ["little-csd <littlecsd@gmail.com>"]
edition = "2018"

[dependencies]
android_logger = "0.10"
log = "0.4"
#ndk-sys = "0.2"
lazy_static = "1.4"
ash = "0.33"
handle = "1.0.0"
ash-window = "0.7.0"
raw-window-handle = "0.3.3"
libc = "0.2"

[dependencies.skia-safe]
version = "0.41.0"
features = ["vulkan", "gpu"]

[lib]
crate-type = ["cdylib"]
