[package]
name = "rust_app"
version = "0.0.1"
authors = ["little-csd <littlecsd@gmail.com>"]
edition = "2018"

[dependencies]
android_logger = "0.10"
log = "0.4"
raw-window-handle = "0.3.3"
libc = "0.2"
#sparkle = "0.1.25"

[dependencies.skia-safe]
version = "0.41.0"
#features = ["vulkan", "gpu"]
features = ["gl", "gpu"]

[dependencies.surfman]
version = "0.4.3"
features = ["sm-raw-window-handle"]

[lib]
crate-type = ["cdylib"]
