[package]
name = "rust_app"
version = "0.0.1"
authors = ["little-csd <littlecsd@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
android_logger = "0.10"
log = "0.4"
libc = "0.2"
khronos-egl = { version = "4.1", features = ["static", "no-pkg-config"] }

[dependencies.skia-safe]
version = "0.41.0"
#features = ["vulkan", "gpu"]
features = ["gl", "gpu"]

[lib]
crate-type = ["cdylib"]
